--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Cat Pictures</h1>
-    <p>Cat!</p>
+    <p>Website With cats!</p>
     <img src="cat1.jpg" alt="Picture of a cat" width="200" height="250">
     <img src="cat2.jpg" alt="Cat2" width = 200 height="250">
     <img src="cat3.jpg" alt="Cat3" width = 200 height ="250">
