--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <title>Cat Pictures</title>
     <link rel="stylesheet" type="text/css" href="mywebsite.css">
+    
 </head>
 
 <body>
     <h1>Cat Pictures</h1>
-    <p>Website With cats!</p>
+    <p>A Website With Cat Pictures!</p>
     <img src="cat1.jpg" alt="Picture of a cat" width="200" height="250">
     <img src="cat2.jpg" alt="Cat2" width = 200 height="250">
     <img src="cat3.jpg" alt="Cat3" width = 200 height ="250">
@@ -29,7 +30,11 @@
     <img src="cat18.jpg" alt="cat18" width = 200 height="250">
     <img src="cat19.jpg" alt="cat19" width = 200 height="250">
     <img src="cat20.jpg" alt="cat20" width = 200 height="250">
-
+    <img src="cat21.jpg" alt="cat21" width = 200 height="250">
+    <img src="cat22.jpg" alt="cat22" width = 200 height="250">
+    <img src="cat23.jpg" alt="cat23" width = 200 height="250">
+    <img src="cat24.jpg" alt="cat24" width = 200 height="250">
+    <img src="cat25.jpg" alt="cat25" width = 200 height="250">
 </body>
 
 <h1>Made By Aaron</h1>
