--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>Cat Pictures</h1>
-    <p>A Website With Cat Pictures!</p>
+    <a href="www.google.com">This is a link to Google</a>
+    <p>Cat!</p>
     <img src="cat1.jpg" alt="Picture of a cat" width="200" height="250">
     <img src="cat2.jpg" alt="Cat2" width = 200 height="250">
     <img src="cat3.jpg" alt="Cat3" width = 200 height ="250">
@@ -35,6 +36,11 @@
     <img src="cat23.jpg" alt="cat23" width = 200 height="250">
     <img src="cat24.jpg" alt="cat24" width = 200 height="250">
     <img src="cat25.jpg" alt="cat25" width = 200 height="250">
+    <img src="cat26.jpg" alt="cat26" width = 200 height="250">
+    <img src="cat27.jpg" alt="cat27" width = 200 height="250">
+    <img src="cat28.jpg" alt="cat28" width = 200 height="250">
+    <img src="cat29.jpg" alt="cat29" width = 200 height="250">
+    <img src="cat30.jpg" alt="cat30" width = 200 height="250">
 </body>
 
 <h1>Made By Aaron</h1>
