--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
     <img src="cat28.jpg" alt="cat28" width = 200 height="250">
     <img src="cat29.jpg" alt="cat29" width = 200 height="250">
     <img src="cat30.jpg" alt="cat30" width = 200 height="250">
+    <img src="cat31.jpg" alt="cat31" width = 200 height="250">
+    <img src="cat32.jpg" alt="cat32" width = 200 height="250">
+    <img src="cat33.jpg" alt="cat33" width = 200 height="250">
+    <img src="cat34.jpg" alt="cat34" width = 200 height="250">
+    <img src="cat35.jpg" alt="cat35" width = 200 height="250">
+    <img src="cat36.jpg" alt="cat36" width = 200 height="250">
+    <img src="cat37.jpg" alt="cat37" width = 200 height="250">
+    <img src="cat38.jpg" alt="cat38" width = 200 height="250">
+    <img src="cat39.jpg" alt="cat39" width = 200 height="250">
+    <img src="cat40.jpg" alt="cat40" width = 200 height="250">
+
 </body>
 
 <h1>Made By Aaron</h1>
