--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 <head>
     <title>Cat Pictures</title>
     <link rel="stylesheet" type="text/css" href="mywebsite.css">
-    
 </head>
 
 <body>
     <h1>Cat Pictures</h1>
-    <a href="www.google.com">This is a link to Google</a>
-    <p>Cat!</p>
-    <img src="cat1.jpg" alt="Picture of a cat" width="200" height="250">
+    <p>Cats!</p>
+    <img src="cat1.jpg" alt="Cat1" width="200" height="250">
     <img src="cat2.jpg" alt="Cat2" width = 200 height="250">
     <img src="cat3.jpg" alt="Cat3" width = 200 height ="250">
     <img src="cat4.jpg" alt="Cat4" width = 200 height ="250">
@@ -51,7 +49,6 @@
     <img src="cat38.jpg" alt="cat38" width = 200 height="250">
     <img src="cat39.jpg" alt="cat39" width = 200 height="250">
     <img src="cat40.jpg" alt="cat40" width = 200 height="250">
-
 </body>
 
 <h1>Made By Aaron</h1>
