--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <img src="cat38.jpg" alt="cat38" width = 200 height="250">
     <img src="cat39.jpg" alt="cat39" width = 200 height="250">
     <img src="cat40.jpg" alt="cat40" width = 200 height="250">
+    <img src="cat41.jpg" alt="cat41" width = 200 height="250">
 </body>
 
 <h1>Made By Aaron</h1>
